End of Section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings":{
     "DefaultConnection":"Server=DESKTOP-8B0LD25;Database=Skinet;Trusted_Connection=True;"
-  }
+  },
+  "ApiUrl":"https://localhost:5001/"
 }
