--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings":{
-    "DefaultConnection":"Server=DESKTOP-8B0LD25;Database=Skinet;Trusted_Connection=True;"
+    "DefaultConnection":"Server=DESKTOP-8B0LD25;Database=Skinet;Trusted_Connection=True;",
+    "Redis":"localhost"
   },
   "ApiUrl":"https://localhost:5001/"
 }
