--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -6,6 +6,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2"/>
     <PackageReference Include="Abbotware.Interop.SystemTextJson" Version="4.0.115"/>
+    <PackageReference Include="StackExchange.Redis" Version="2.1.39"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
