Api - Validations - End of section 16

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "ConnectionStrings":{
     "DefaultConnection":"Server=DESKTOP-8B0LD25;Database=Skinet;Trusted_Connection=True;",
-    "IdentityConnection":"Server=DESKTOP-8B0LD25;Database=SkinetIdentity;Trusted_Connection=True;",
+    "IdentityConnection":"Server=DESKTOP-8B0LD25;Database=SkinetIdentityDB;Trusted_Connection=True;",
     "Redis":"localhost"
   },
   "Token":{
